flat fix submenuwrap

--- a/design/openpa_flat/scss/flat/_responsive.scss
+++ b/design/openpa_flat/scss/flat/_responsive.scss
@@ -194,7 +194,7 @@
   }
 }
 
-@media only screen and (min-width:992px){
+@media only screen and (min-width:1100px){
   .sub_menu_wrap{
     &.items-2{
       width: $submenu_item_width * 2 + 20px;
